# aether

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/aether-dashboard/: package.json
apps/aether-dashboard/app/: page.tsx
apps/aether-dashboard/src/: App.css  App.tsx
apps/gateway-api/: README.md  package.json
apps/gateway-api/src/: auth.ts  billing.ts  cache.ts  graphql.ts  index.ts  rate_limiter.ts  webrtc.ts
apps/gateway-api/src/routes/: semantic.ts
apps/gateway-api/tests/: gateway.test.ts
apps/mcp-bridge/: package.json  tsconfig.json
apps/nexus-manager/: README.md  package.json  pyproject.toml
apps/nexus-manager/src/: gpu_cache.py  interfaces.py  main.py  tenant_isolation.py  vector_db.py
apps/nexus-manager/src/intelligence/: drift_detector.py  graph.py  orchestrator.py  swarm.py  tools.py
apps/refinery-core/: Cargo.toml  Dockerfile  README.md  build.rs  package.json
apps/refinery-core/src/: dlq.rs  errors.rs  flattener.rs  main.rs  models.rs  schema_registry.rs  telemetry.rs  zero_copy.rs
apps/refinery-core/src/adapters/: mainframe.rs  mod.rs  mongodb.rs  snowflake.rs
apps/refinery-core/src/models/: cdc.rs  events.rs  mod.rs
deployments/charts/aether-core/: Chart.yaml  values.yaml
deployments/charts/aether-core/templates/: deployment.yaml  hpa.yaml
deployments/charts/aether/templates/: deployment.yaml
deployments/terraform/: anycast.tf
docs/: engineering-standards.md  vision.md
docs/architecture/: multi-region.md
docs/compliance/: soc2_hipaa.md
