[project]
name = "nexus-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "fastavro>=1.12.1",
    "qdrant-client>=1.17.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.44.0",
    "watchdog>=6.0.0",
]
