[project]
name = "nexus-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "fastavro>=1.12.1",
    "qdrant-client>=1.17.1",
    "langchain>=0.1.0",
    "langgraph>=0.0.30",
    "langsmith>=0.1.0",
    "numpy>=1.26.0",
    "langchain-community>=0.0.30",
]
