[package]
name = "refinery-core"
version = "0.1.0"
edition = "2024"

[dependencies]
apache-avro = "0.21.0"
chrono = "0.4.44"
prost = "0.14.3"
serde = "1.0.228"
serde_json = "1.0.149"
shield = { version = "0.1.0", path = "../../packages/shield-pii" }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }
tokio = { version = "1.52.0", features = ["full"] }
tonic = "0.14.5"
uuid = { version = "1.23.0", features = ["v4"] }
